# bustw_server

./: Dockerfile  README.md  app.py  city.py  city_map.json  config.json  config.py  docker-entrypoint.sh  info.py  ptx.py  pyproject.toml  requirements.txt  route.py  run.py  stop.py  taiwan.py
api/: taiwan.json  v1_info.py  v1_real.py  v1_root.py
api/old/: v1_real_1.py  v1_stop_1.py  v1_stop_2.py  v1_time_1.py
bustw_server/: __init__.py  city.py  config.py  info.py  route.py  stop.py
bustw_server/api/: v1_city.py  v1_info.py  v1_real.py  v1_root.py  v1_stop.py  v1_stop_1.py  v1_time.py
bustw_server/api/old/: v1_city_1.py  v1_info_1.py  v1_real_1.py  v1_stop_1.py  v1_stop_2.py  v1_time_1.py
bustw_server/api/utils/: city.py
bustw_server/docs/: swagger.json
bustw_server/models/: v1_city.py  v1_info.py
bustw_server/utils/: ptx_cache.py  taiwan.py
controllers/: v1_city.py  v1_info.py  v1_real.py  v1_stop.py  v1_time.py
controllers/old/: v1_city_1.py  v1_info_1.py  v1_real_1.py  v1_stop_1.py  v1_stop_2.py  v1_time_1.py
ptx_api/: ptx.py
services/: aio.py  info.py
utils/: cache.py  ptx_api.py  ptx_cache.py  taiwan.py
