[tool.poetry]
name = "bustw_server"
version = "1.1.0"
description = "bus tracker for Taiwanese Server"
authors = ["Pin Lin <pinlin945@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^2.0"
requests = "^2.25"
ptx-api = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
